# newlang

./: .gitignore  GNUmakefile  HACKING  INSTALL  Makefile  Makefile.am  README.md  TODO  configure-devel  configure.ac  zoe.1
compiler/: bytecode.cc  bytecode.h  bytecode.hh  lexer.ll  literals.h  literals.hh  parser.yy
doc/: zoe.html
exe/: exec.cc  exec.hh  main.cc  options.cc  options.hh  repl.cc
lib/: bytecode.c  bytecode.cc  bytecode.h  exec.c  global.h  hash.c  hash.h  lexer.l  opcode.h  parser.y  stack.c  stack.h  userfunctions.c  userfunctions.h  zarray.h  zbool.h  znil.h  znumber.h  zoe.c  zoe.cc  zoe.h  zoe.inl.h  zoevm.h  zstring.h  ztable.h  zvalue.c  zvalue.cc  zvalue.h  zworld.c  zworld.h
old/: Makefile  TODO  zoe.1
old/lib/: bytecode.cc  bytecode.h  except.h  exec.c  global.h  lexer.l  opcode.h  parser.y  stack.c  stack.h  zoe.c  zoe.h  zoe.inl.h  zvalue.c  zvalue.cc  zvalue.h
old/src/: main.cc  options.cc  options.h  repl.c  repl.h
old/tests/: tests.cc  zoe.cc
reentrant4/: build.sh  lexer.l  parser.y
src/: Makefile.am  bytecode.c  bytecode.h  compiler.c  compiler.h  lexer.l  main.c  main.cc  options.c  options.cc  options.h  parser.y  repl.c  repl.cc  repl.h  vm.c  vm.h  zoe.h
src/tmp/: compiler.c  lexer.l  zoe.c
tests/: _tests.c  bytecode.cc  minunit.h  tests.c  tests.cc  zoe.cc
vm/: exceptions.hh  opcode.h  opcode.hh  zarray.cc  zarray.h  zarray.hh  zbool.cc  zbool.h  zbool.hh  zenv.hh  zfunction.cc  zfunction.hh  znil.h  znil.hh  znumber.cc  znumber.h  znumber.hh  zoevm.cc  zoevm.h  zoevm.hh  zstring.cc  zstring.h  zstring.hh  ztable.cc  ztable.h  ztable.hh  ztype.cc  ztype.h  ztype.hh  zvalue.h  zvalue.hh
