# prelude
AC_INIT([zoe], [0.3.0], [https://github.com/andrenho/zoe/issues])
AC_CONFIG_SRCDIR([src/main.cc])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])

# check for programs
AC_PROG_CXX
AC_PROG_LEX
AC_PROG_YACC

# check for libraries

# check for header files

# check for typedefs, structures and compiler characteristics

# check for library funtions

# output files
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
